[tool.poetry]
name = "dionysus"
version = "0.1.0"
description = ""
authors = ["xue-yuan <denon@xueyuan.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
