[tool.poetry]
name = "dionysus"
version = "0.1.0"
description = ""
authors = ["xue-yuan <denon@xueyuan.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
